# rust-tagging-service

./: Cargo.toml  Procfile  build.rs
proto/: taggingservice.proto
src/: main.rs
src/utils/: mod.rs
