[package]
name = "tagging-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name="rpc-server"

[[bin]]
name="writer"

[dependencies]
futures = "0.3.28"
prost = "0.12.1"
redis = "0.23.3"
redis_pool = "0.2.1"
serde = { version="1.0.188", features=["derive", "serde_derive"]}
serde_json = "1.0.107"
tokio = {  version="1.32.0", features=["full"] }
tonic = "0.10.1"

[build-dependencies]
tonic-build = "0.10.1"
